# scikit-build-sample-projects

./: .flake8  .gitignore  .pre-commit-config.yaml  .ruff.toml  AGENTS.md  README.md  noxfile.py  pytest.ini  ruff.toml
.github/workflows/: ci.yml
projects/clib-wrapper/: CMakeLists.txt  setup.py  test_script.sh
projects/clib-wrapper/src/cxx/: CMakeLists.txt  my_c_module.c  my_c_module.h
projects/clib-wrapper/src/python/my_python_package/: CMakeLists.txt  __init__.py  _cython_wrapper.pyx
projects/core-c-hello/: CMakeLists.txt  pyproject.toml  skcdpure.c
projects/core-cython-hello/: CMakeLists.txt  pyproject.toml
projects/core-cython-hello/hello/: CMakeLists.txt  __init__.py  _hello.pyx
projects/core-cython-hello/tests/: test_hello_cython.py
projects/core-pybind11-hello/: CMakeLists.txt  pyproject.toml  skcdemo.cpp
projects/hatchling-pybind11-hello/: CMakeLists.txt  pyproject.toml
projects/hatchling-pybind11-hello/cpp/: _core.cpp
projects/hatchling-pybind11-hello/src/skcdemo/: __init__.py
projects/hello/: CMakeLists.txt  setup.py
projects/hello-cmake-package/: CMakeLists.txt  README.md  pyproject.toml  setup.py
projects/hello-cmake-package/cmake/: helloConfig.cmake.in
projects/hello-cmake-package/include/: hello.hpp
projects/hello-cmake-package/src/: hello.cpp
projects/hello-cmake-package/src/hello/: __init__.py  __main__.py.in  hello_py.cpp
projects/hello-cmake-package/tests/: test_hello.py
projects/hello-cmake-package/tests/cpp/: CMakeLists.txt  test.cpp
projects/hello-cpp/: CMakeLists.txt  pyproject.toml  setup.py  test_hello_cpp.py
projects/hello-cpp/hello/: __init__.py  __main__.py  _hello.cxx
projects/hello-cython/: CMakeLists.txt  pyproject.toml  setup.py
projects/hello-cython/hello/: __init__.py  _hello.pyx
projects/hello-f2py/: CMakeLists.txt  README.md  pyproject.toml  setup.py
projects/hello-f2py/hello/: CMakeLists.txt  __main__.py  _hello.pyf  hello.f90
projects/hello-f2py/hello_auto/: CMakeLists.txt  __main__.py
projects/hello-f2py/hello_f2py/: CMakeLists.txt  __init__.py  _hello.pyf  hello.f90
projects/hello-f2py/src/: cylinder_methods.f90
projects/hello-f2py/tests/: test_hello_f2py.py
projects/hello-free-threading/: CMakeLists.txt  pyproject.toml
projects/hello-free-threading/src/freecomputepi/: _core.cpp  _pybcore.cpp  comp.py  pure.py  pybind.py
projects/hello-free-threading/tests/: test_thread.py
projects/hello-numpy/: CMakeLists.txt  README.md  pyproject.toml  setup.py
projects/hello-numpy/src/hello/: hello_py.cpp
projects/hello-numpy/tests/: test_hello_numpy.py
projects/hello-pure/: pyproject.toml  setup.py
projects/hello-pure/hello/: __init__.py  __main__.py
projects/hello-pybind11/: CMakeLists.txt  README.md  pyproject.toml  setup.py  tox.ini
projects/hello-pybind11/cmake/: helloConfig.cmake.in
projects/hello-pybind11/include/: hello.h
projects/hello-pybind11/src/: CMakeLists.txt  hello.cpp
projects/hello-pybind11/src/hello/: CMakeLists.txt  __init__.py  hello_py.cpp
projects/hello-pybind11/tests/: test_hello_pybind11.py
projects/hello-pybind11/wrap/: CMakeLists.txt  __init__.py  hello_init_py.cpp
projects/hello-pybind11/wrap/test_python/: test_hello_pybind11.py
projects/pen2-cython/: CMakeLists.txt  pyproject.toml  setup.py
projects/pen2-cython/scripts/: CMakeLists.txt  pen2_cython
projects/pen2-cython/src/: CMakeLists.txt  __init__.py  _pen2.pyx
projects/pi-fortran/: CMakeLists.txt  README.md  pyproject.toml  setup.py
projects/pi-fortran/pi/: _pi.f  pi.pyf
projects/pi-fortran/tests/: test_pi.py
projects/tower-of-babel/: CMakeLists.txt  setup.py  tbabel_boost_common.h  tbabel_boost_common_imp.h  tbabel_boost_module.cxx  tbabel_boost_module.h  tbabel_boost_module.pxd  tbabel_boost_shared.cxx  tbabel_boost_shared.h  tbabel_boost_shared.pxd  tbabel_boost_static.cxx  tbabel_boost_static.h  tbabel_boost_static.pxd  tbabel_cython_common.pxi  tbabel_cython_common_imp.pxi  tbabel_cython_module.pyx  tbabel_cython_shared.pxd  tbabel_cython_shared.pyx  tbabel_cython_static.pyx  tbabel_python.py
projects/tower-of-babel/scripts/: tbabel.pyx
tests/: __init__.py  test_projects.py
