[project]
name = "hello-f2py"
version = "1.2.3"
description = "a minimal example package (cython version)"
authors = [
    {name = "The scikit-build team"},
]
license = {text = "MIT"}
requires-python = ">=3.7"

[build-system]
requires = [
    "setuptools>=42",
    "scikit-build>=0.13",
    "cmake>=3.18",
    "ninja",
    "cython",
    "numpy",
]
build-backend = "setuptools.build_meta"
