[build-system]
requires = ["scikit-build-core >=0.9.5", "pybind11 >=2.13.1"]
build-backend = "scikit_build_core.build"

[project]
name = "freecomputepi"
version = "0.0.1"

[tool.cibuildwheel]
build-frontend = "build[uv]"
build = "cp313*"
free-threaded-support = true
test-command = "pytest {package} --durations=0"
test-requires = ["pytest"]
