[build-system]
requires = [
    "scikit-build-core",
    "numpy>=1.21",
]
build-backend = "scikit_build_core.build"

[project]
name = "pi-fortran"
version = "1.0.1"
requires-python = ">=3.7"
dependencies = ["numpy>=1.21"]

[tool.scikit-build]
ninja.minimum-version = "1.10"
cmake.minimum-version = "3.17.2"
