[build-system]
requires = [
    "scikit-build-core",
    "numpy>=1.21",
]
build-backend = "scikit_build_core.build"

[project]
name = "pi-fortran"
version = "1.0.1"
requires-python = ">=3.9"
dependencies = ["numpy>=1.21"]

[tool.scikit-build]
ninja.version = ">=1.10"
cmake.version = ">=3.17.2"

# Windows defaults to the Visual Studio generator, which has no Fortran support
# and ignores compiler overrides. Use Ninja with the MinGW toolchain instead
# (gcc and gfortran must be on PATH).
[[tool.scikit-build.overrides]]
if.platform-system = "win32"
cmake.args = ["-GNinja"]
cmake.define.CMAKE_C_COMPILER = "gcc"
cmake.define.CMAKE_Fortran_COMPILER = "gfortran"
